tests/errors/pat_or_asymmetric_err/pat_or_asymmetric_err.c
#error pat_or_asymmetric_err:6:3 OR pattern including some binding is unimplemented
#error pat_or_asymmetric_err:6:3 OR pattern binds different set of variables
#error pat_or_asymmetric_err:10:3 OR pattern binds different set of variables
#error pat_or_asymmetric_err:15:3 OR pattern including some binding is unimplemented
#error pat_or_asymmetric_err:15:3 OR pattern binds different set of variables
